litmask/tests/compile/masked_serialize_unit_struct.stderr
error: MaskedSerialize! grammar: supports structs with named fields only
 --> tests/compile/masked_serialize_unit_struct.rs:7:8
  |
7 | struct NothingToMask;
  |        ^^^^^^^^^^^^^
